# era5-levels-study

./: .gitignore  README.md  pyproject.toml
configs/: base_0p25.yaml  base_1p5.yaml  demo_0p25_37.yaml  devtest.yaml  levels13.yaml  levels13_1p5.yaml  levels37.yaml  levels37_1p5.yaml  levels37_1p5_e1024.yaml  scale8.yaml  scale8_1p5.yaml  smoke.yaml  smoke_dist.yaml  smoke_nout2.yaml  transfer_13core_37io.yaml  transfer_37core_13io.yaml
data/constant_masks/: pressure_norms.csv  surface_norms.csv  topography_normalized.npy
data/constant_masks_1p5/: land_mask.npy  soil_type_normalized.npy  topography_normalized.npy
data/normalization/: norm_mean.npy  norm_std.npy
data/normalization/1p5/13/: norm_mean.npy  norm_std.npy
data/normalization/1p5/37/: norm_mean.npy  norm_std.npy
era5_levels/: __init__.py  beast_api.py  checkpoint.py  config.py  evaluate.py  losses.py  main.py  train.py  transfer.py  variable_layout.py
scripts/: check_sharding.py  check_sst_nan.py  coarsen_masks.py  coarsen_to_1p5.py  make_level_subset.py  plot_results.py  run_subset_eval.py
slurm/: coarsen_cpu.sh  setup_env.sh  submit_chain.sh  submit_coarsen_chain.sh  submit_demo_0p25.sh  submit_smoke.sh  submit_subset.sh  submit_subset_eval.sh  submit_train.sh  submit_train_1p5.sh  submit_transfer.sh
