[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "era5-levels-study"
version = "0.0.1"
description = "Does 37 vs 13 ERA5 pressure levels matter? A deterministic SWIN study built on beast."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "torch",
    "numpy",
    "pyyaml",
    "xarray",
]

[project.optional-dependencies]
plots = ["matplotlib", "pandas"]

[tool.hatch.build.targets.wheel]
packages = ["era5_levels"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "D", "D417"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["D103"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
